Fix horizontal overflow on projects page

--- a/styles/breakpoints/_projects-breakpoints.scss
+++ b/styles/breakpoints/_projects-breakpoints.scss
@@ -36,6 +36,7 @@
         }
     }
     .inner-sec{
+        padding: 0;
         .project-heading{
             font-size: 1.5em;
         }
